--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,11 @@
-<div id="login-wrapper" class="col-md-6 col-md-offset-3">
+<div id="login-wrapper" class="col-md-4 offset-md-4">
     <div id="login">
         <div id="logo">
             <span id="logo-strong">Test</span>
             <span id="logo-text">Storage</span>
         </div>
         <h2>{{ 'LOGINPAGE.LOGIN' | translate }}</h2>
-        
+
         <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
             <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
                 <!--<label for="username">{{ 'LOGINPAGE.USERNAME' | translate }}</label>-->
