fix(Profile): fix date/time representation

--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -19,7 +19,7 @@
         <!-- Senior Test Analyst -->
       </div>
       <div class="profile-register-date">
-        Registered: {{ profile.created }}
+        Registered: {{ profile.created | date: 'dd/MM/yyyy' }}
         <!-- 15.01.2017 -->
       </div>
 
