--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -16,11 +16,10 @@
       </div>
       <div class="profile-jobtitle">
         {{ profile.work.title }}
-        <!-- Senior Test Analyst -->
       </div>
       <div class="profile-register-date">
-        Registered: {{ profile.created | date: 'dd/MM/yyyy' }}
-        <!-- 15.01.2017 -->
+        {{ 'USERPROFILEPAGE.REGISTERED' | translate }}: {{ profile.created | date: 'dd/MM/yyyy' }}
+        <!-- TODO different dates for EU and US aka 15.01.2017 -->
       </div>
 
     </div>
@@ -37,13 +36,13 @@
   </div>
   <div class="profile-info">
     <div class="profile-work">
-      <h6>Work Information</h6>
+      <h6>{{ 'USERPROFILEPAGE.WORK_INFORMATION' | translate }}</h6>
       <table class="table">
         <thead>
           <tr>
-            <th>Email</th>
-            <th>Phone Number</th>
-            <th>Company</th>
+            <th>{{ 'USERPROFILEPAGE.EMAIL' | translate }}</th>
+            <th>{{ 'USERPROFILEPAGE.PHONE_NUMBER' | translate }}</th>
+            <th>{{ 'USERPROFILEPAGE.COMPANY' | translate }}</th>
           </tr>
         </thead>
         <tbody>
@@ -56,12 +55,12 @@
       </table>
     </div>
     <div class="profile-personal">
-      <h6>Personal Information</h6>
+      <h6>{{ 'USERPROFILEPAGE.PERSONAL_INFORMATION' | translate }}</h6>
       <table class="table">
         <thead>
           <tr>
-            <th>Email</th>
-            <th>Phone Number</th>
+            <th>{{ 'USERPROFILEPAGE.EMAIL' | translate }}</th>
+            <th>{{ 'USERPROFILEPAGE.PHONE_NUMBER' | translate }}</th>
           </tr>
         </thead>
         <tbody>
