--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div id="wrapper">
+<div id="wrapper" [class.dark-theme]="themeService.theme">
     
     <app-sidebar [sidebarCollapsed]="sidebarCollapsed"></app-sidebar>
 
