--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navigation-bar">
+  <nav class="navigation-bar" [class.dark-theme]="themeService.theme">
 
 
     <div class="left">
@@ -7,10 +7,10 @@
     </div>
     <div class="right">
 
-      <a class="icon-info link dropbtn" (click)="toggleNotifications();"><i class="fa fa-bell" aria-hidden="true"></i>
+      <a class="icon-info link dropbtn" (click)="shown !== 'NOTIFICATIONS' ? shown = 'NOTIFICATIONS' : shown = ''"><i class="fa fa-bell" aria-hidden="true"></i>
         <span class="notifications-alarm"></span>
       </a>
-      <div class="dropdown-content" [class.show]="isNotificationsDisplayed">
+      <div class="dropdown-content" [class.show]="shown === 'NOTIFICATIONS'">
         <ul>
           <app-notifications></app-notifications>
         </ul>
@@ -22,8 +22,8 @@
 
 
       <li class="link dropdown-item">
-        <a class="dropbtn" (click)="toggleDropdown();">{{ user.firstName }} {{ user.lastName }} <span class="fa fa-angle-down" [class.chevron-rotated]="isDropdownDisplayed"></span></a>
-        <div class="dropdown-content" [class.show]="isDropdownDisplayed">
+        <a class="dropbtn" (click)="shown !== 'SETTINGS' ? shown = 'SETTINGS' : shown = ''">{{ user.firstName }} {{ user.lastName }} <span class="fa fa-angle-down" [class.chevron-rotated]="shown === 'SETTINGS'"></span></a>
+        <div class="dropdown-content" [class.show]="shown === 'SETTINGS'">
           <ul>
             <li><a routerLink="/profile"><i class="fa fa-user"></i> {{ 'HEADER.USER_PROFILE' | translate }}</a></li>
             <li><a (click)="logout()"><i class="fa fa-power-off"></i> {{ 'HEADER.LOGOUT' | translate }}</a></li>
