--- a/src/app/modules/profile/profile.component.css
+++ b/src/app/modules/profile/profile.component.css
@@ -8,6 +8,23 @@
     width: 100%;
 }
 
+/* DARK THEME */
+
+#wrapper.dark-theme .profile-data {
+    border-right: 1px solid #7a7f8c;
+    border-bottom: 1px solid #7a7f8c;
+}
+
+#wrapper.dark-theme .profile-work,
+#wrapper.dark-theme .profile-personal {
+    border-bottom: 1px solid #7a7f8c;
+}
+
+
+
+/* DEFAULT THEME */
+
+
 .profile-data {
     /* border: 1px solid #333; */
     justify-content: center;
@@ -86,8 +103,6 @@
 }
 
 .profile-info {
-    /* border: 1px solid gray; */
-    background-color: #fff;
     height: 100%;
     width: 80%;
 }
@@ -107,7 +122,7 @@
 }
 
 .profile-work {
-    background: #fff;
+    
     padding: 20px 20px 10px 50px;
     /*#DADADA;*/
     height: 150px;
@@ -116,7 +131,6 @@
 }
 
 .profile-personal {
-    background: #fff;
     padding: 20px 20px 10px 50px;
     height: 250px;
     width: 100%;
@@ -127,7 +141,6 @@
 .profile-personal td,
 .profile-work th,
 .profile-work td {
-    border: 1px solid red;
     padding-left: 0;
     padding-bottom: 0;
 }
