--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -6,7 +6,7 @@
       <a id="menu_toggle" class="toggle" (click)="collapseToggle();"><i class="fa fa-bars"></i></a>
     </div>
     <div class="right">
-
+<button (click)="themeService.theme = !themeService.theme;"></button>
       <a class="icon-info link dropbtn" (click)="shown !== 'NOTIFICATIONS' ? shown = 'NOTIFICATIONS' : shown = ''"><i class="fa fa-bell" aria-hidden="true"></i>
         <span class="notifications-alarm"></span>
       </a>
