feat(Notifications): introduce notifications list UI

--- a/src/app/modules/layout/header/header.component.css
+++ b/src/app/modules/layout/header/header.component.css
@@ -205,7 +205,7 @@
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    max-width: 100%;
+    max-width: 400px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     top: 56px;
     right: 0;
