--- a/src/app/modules/layout/notifications/notifications.component.css
+++ b/src/app/modules/layout/notifications/notifications.component.css
@@ -19,7 +19,7 @@
 }
 
 .notifications .fa-2x {
-    padding-right: 10px;
+    padding-right: 20px;
 }
 
 
@@ -29,7 +29,6 @@ ul {
     list-style: none;
 }
 
-/* TODO li a */
 .notifications li a {
     display: block;
     padding: 20px;
@@ -74,7 +73,7 @@ ul {
 
 .notifications.dark-theme .header, 
 .notifications.dark-theme li a {
-    border-bottom: 1px solid #616161;
+    border-bottom: 1px solid #303C4D;
 }
 
 .notifications.dark-theme li a {
@@ -86,7 +85,7 @@ ul {
 }
 
 .notifications.dark-theme .footer {
-    border-top: 1px solid #616161;
+    border-top: 1px solid #303C4D;
 }
 
 /* icons */
