feat(Login): Login page dark theme support added

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<div id="login-wrapper" class="col-md-4 offset-md-4">
-    <div id="login">
+<div id="login-wrapper" [class.dark-theme]="themeService.theme">
+    <div id="login" class="col-md-4 offset-md-4">
         <div id="logo">
             <span id="logo-strong">Test</span>
             <span id="logo-text">Storage</span>
