--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,6 +1,17 @@
 #login-wrapper {
     display: flex;
     align-self: center;
+    min-height: 700px; 
+}
+
+#login-wrapper.dark-theme {
+   background:  #283242;
+}
+
+#login-wrapper.dark-theme #logo-text,
+#login-wrapper.dark-theme #logo-strong,
+#login-wrapper.dark-theme #login h2 {
+   color:  #FFF;
 }
 
 #login {
