fix(Projects): dont show empty state when collection not exist

--- a/src/app/modules/projects/projects.component.html
+++ b/src/app/modules/projects/projects.component.html
@@ -1,37 +1,37 @@
-<div id="wrapper" [class.dark-theme]="themeService.theme">
+<div *ngIf="projects" id="wrapper" [class.dark-theme]="themeService.theme">
 
-<div *ngIf="projects.length > 0; then existProjects else noExistProjects"></div>
+  <div *ngIf="projects.length > 0; then existProjects else noExistProjects"></div>
 
-<ng-template #existProjects>
- <table *ngIf="projects.length > 0;" class="table table-striped">
-    <thead>
-      <tr>
-        <th>Project Name</th>
-        <th>Description</th>
-        <th>Enabled</th>
+  <ng-template #existProjects>
+    <table *ngIf="projects.length > 0;" class="table table-striped">
+      <thead>
+        <tr>
+          <th>Project Name</th>
+          <th>Description</th>
+          <th>Enabled</th>
+        </tr>
+      </thead>
+      <tr *ngFor="let project of projects">
+        <td><a [routerLink]="[project._id]">{{ project.name }}</a></td>
+        <td>{{ project.description }}</td>
+        <td>{{ project.enabled }}</td>
       </tr>
-    </thead>
-    <tr *ngFor="let project of projects">
-      <td><a routerLink="project._id">{{ project.name }}</a></td>
-      <td>{{ project.description }}</td>
-      <td>{{ project.enabled }}</td>
-    </tr>
-  </table>
-</ng-template>
+    </table>
+  </ng-template>
 
 
-<ng-template #noExistProjects>
- <div class="noexist-wrapper">
-   <div class="no-project">
-    <img src="assets/add-project.png">
-    <h4>You have not created Projects yet.</h4>
-    <p class="tips">Tap the 'Create Project' button to get started</p>
-    <button class="btn btn-primary">Create Project</button>
-   </div>
- </div>
-</ng-template>
+  <ng-template #noExistProjects>
+    <div class="noexist-wrapper">
+      <div class="no-project">
+        <img src="assets/add-project.png">
+        <h4>You have not created Projects yet.</h4>
+        <p class="tips">Tap the 'Create Project' button to get started</p>
+        <button class="btn btn-primary">Create Project</button>
+      </div>
+    </div>
+  </ng-template>
 
- 
+
 
 
 </div>
