fix(Router): fix routing to detail components

--- a/src/app/modules/projects/projects.component.html
+++ b/src/app/modules/projects/projects.component.html
@@ -12,7 +12,7 @@
         </tr>
       </thead>
       <tr *ngFor="let project of projects">
-        <td><a routerLink="project._id">{{ project.name }}</a></td>
+        <td><a [routerLink]="['./', project._id]">{{ project.name }}</a></td>
         <td>{{ project.description }}</td>
         <td>{{ project.enabled }}</td>
       </tr>
