feat(Projects): create project from projects list

--- a/src/app/modules/projects/projects.component.html
+++ b/src/app/modules/projects/projects.component.html
@@ -14,6 +14,14 @@
         </div>
       </div>
 
+      <div class="project-card card">
+        <div class="card-block">
+          <h1><i class="fa fa-3x fa-plus"></i></h1>
+          <br><br>
+          <a [routerLink]="['./create']" class="card-button btn btn-primary">Create Project</a>
+        </div>
+      </div>
+
      
 
       </div>
