refactor(User): skype profile field added

--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -25,6 +25,7 @@
     </div>
     <div class="profile-social-networks">
       <ul *ngIf="profile.social">
+        <li *ngIf="profile.social.skype"><a href="{{ profile.social.skype }}" target="_blank"><i class="fa fa-skype"></i></a></li>
         <li *ngIf="profile.social.github"><a href="{{ profile.social.github }}" target="_blank"><i class="fa fa-github"></i></a></li>
         <li *ngIf="profile.social.linkedin"><a href="{{ profile.social.linkedin }}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         <li *ngIf="profile.social.facebook"><a href="{{ profile.social.facebook }}" target="_blank"><i class="fa fa-facebook"></i></a></li>
