fix(Settings): fix dark theme styles

--- a/src/app/modules/projects/projects.component.css
+++ b/src/app/modules/projects/projects.component.css
@@ -45,7 +45,6 @@
     align-self: center;
     justify-content: center;
     text-align: center;
-    
 }
 
 .no-project img {
@@ -62,10 +61,16 @@
     margin-bottom: 20px;
 }
 
+
 /* DARK THEME */
+
 
 /* TODO WHITE ICON */
 
 #wrapper.dark-theme .no-project h4 {
     color: #FFF;
+}
+
+#wrapper.dark-theme .card {
+    background: inherit;
 }
