--- a/src/app/modules/users/users-create/users-create.component.html
+++ b/src/app/modules/users/users-create/users-create.component.html
@@ -1,3 +1,59 @@
-<p>
-  users-create works!
-</p>
+<div id="wrapper">
+
+  <div class="create-form">
+
+    <form name="form" (ngSubmit)="f.form.valid && createNewUser()" #f="ngForm" novalidate>
+
+      <div class="form-group row">
+        <label for="email" class="col-2 col-form-label">Email</label>
+        <div class="col-6">
+          <input class="form-control" type="text" name="email" placeholder="Email" id="email" [(ngModel)]="user.email" #email="ngModel"
+            required>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="last-name" class="col-2 col-form-label">Last name</label>
+        <div class="col-6">
+          <input class="form-control" type="text" name="lastName" placeholder="Last Name" id="last-name" [(ngModel)]="user.lastName"
+            #lastName="ngModel" required>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="first-name" class="col-2 col-form-label">First name</label>
+        <div class="col-6">
+          <input class="form-control" type="text" name="firstName" placeholder="First Name" id="first-name" [(ngModel)]="user.firstName"
+            #firstName="ngModel" required>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="title" class="col-2 col-form-label">Job Title</label>
+        <div class="col-6">
+          <input class="form-control" type="text" name="title" placeholder="Job title" id="title" [(ngModel)]="user.work.title" #workTitle="ngModel"
+            required>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="password" class="col-2 col-form-label">Password</label>
+        <div class="col-6">
+          <input class="form-control" type="text" name="password" placeholder="Password" id="password" [(ngModel)]="user.password"
+            #password="ngModel" required>
+        </div>
+      </div>
+
+
+
+      <div class="form-group row">
+        <div class="offset-sm-2 col-sm-10">
+          <button type="submit" class="btn btn-primary">Create User</button>
+        </div>
+      </div>
+
+    </form>
+
+  </div>
+
+</div>
