--- a/src/app/modules/users/user-create/user-create.component.html
+++ b/src/app/modules/users/user-create/user-create.component.html
@@ -28,10 +28,11 @@
         </div>
       </div>
 
-      <div class="form-group row">
+      
+      <div class="form-group row" ngModelGroup="work">
         <label for="title" class="col-2 col-form-label">Job Title</label>
         <div class="col-6">
-          <input class="form-control" type="text" name="title" placeholder="Job title" id="title" [(ngModel)]="user.work.title" #workTitle="ngModel"
+          <input class="form-control" type="text" name="title" placeholder="Job title" id="title" ngModel
             required>
         </div>
       </div>
