--- a/src/app/modules/users/user-create/user-create.component.html
+++ b/src/app/modules/users/user-create/user-create.component.html
@@ -2,12 +2,12 @@
 
   <div class="create-form">
 
-    <form name="form" (ngSubmit)="f.form.valid && createNewUser()" #f="ngForm" novalidate>
+    <form name="form" (ngSubmit)="f.form.valid && createNewUser(f.value)" #f="ngForm" novalidate>
 
       <div class="form-group row">
         <label for="email" class="col-2 col-form-label">Email</label>
         <div class="col-6">
-          <input class="form-control" type="text" name="email" placeholder="Email" id="email" [(ngModel)]="user.email" #email="ngModel"
+          <input class="form-control" type="text" name="email" placeholder="Email" id="email" ngModel
             required>
         </div>
       </div>
@@ -15,26 +15,36 @@
       <div class="form-group row">
         <label for="last-name" class="col-2 col-form-label">Last name</label>
         <div class="col-6">
-          <input class="form-control" type="text" name="lastName" placeholder="Last Name" id="last-name" [(ngModel)]="user.lastName"
-            #lastName="ngModel" required>
+          <input class="form-control" type="text" name="lastName" placeholder="Last Name" id="last-name" ngModel
+             required>
         </div>
       </div>
 
       <div class="form-group row">
         <label for="first-name" class="col-2 col-form-label">First name</label>
         <div class="col-6">
-          <input class="form-control" type="text" name="firstName" placeholder="First Name" id="first-name" [(ngModel)]="user.firstName"
-            #firstName="ngModel" required>
+          <input class="form-control" type="text" name="firstName" placeholder="First Name" id="first-name"
+            ngModel required>
         </div>
       </div>
 
-      
-      <div class="form-group row" ngModelGroup="work">
+      <div ngModelGroup="work">
+        
+      <div class="form-group row" >
         <label for="title" class="col-2 col-form-label">Job Title</label>
         <div class="col-6">
-          <input class="form-control" type="text" name="title" placeholder="Job title" id="title" ngModel
-            required>
+          <input class="form-control" type="text" name="title" placeholder="Job title" id="title"
+           ngModel required>
         </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="company" class="col-2 col-form-label">Company</label>
+        <div class="col-6">
+          <input class="form-control" type="text" name="company" placeholder="Company" id="company"
+           ngModel>
+        </div>
+      </div>
       </div>
 
       <div class="form-group row">
@@ -49,11 +59,12 @@
 
       <div class="form-group row">
         <div class="offset-sm-2 col-sm-10">
-          <button type="submit" class="btn btn-primary">Create User</button>
+          <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Create User</button>
         </div>
       </div>
 
     </form>
+    <pre>{{ f.value | json }}</pre>
 
   </div>
 
