--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,5 +1,26 @@
 <div id="wrapper">
-  <div>
-    <h1>Page not found!</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="image">
+          <img src="/assets/404.png">
+        </div>
+        <div class="error-template">
+          <h1>
+            Oops!</h1>
+          <h2>
+            404 Not Found</h2>
+          <div class="error-details">
+            Sorry, an error has occured, Requested page not found!
+          </div>
+          <div class="error-actions">
+            <a routerLink="/" class="btn btn-primary btn-lg">
+              <span class="fa fa-home"></span>
+                        Take Me Home
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
