--- a/src/app/modules/testcases/testcase-details/testcase-details.component.html
+++ b/src/app/modules/testcases/testcase-details/testcase-details.component.html
@@ -1,14 +1,24 @@
 <div id="wrapper" *ngIf="testcase">
-<table class="table table-striped">
-  <thead>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Testcase Title</th>
+        <th>Description</th>
+        <th>Preconditions</th>
+        <th>Steps</th>
+        <th>Test Data</th>
+        <th>Expected Result</th>
+        <th>Postconditions</th>
+      </tr>
+    </thead>
     <tr>
-      <th>Testcase Title</th>
-      <th>Description</th>
+      <td>{{ testcase.title }}</td>
+      <td>{{ testcase.description }}</td>
+      <td>{{ testcase.preConditions }}</td>
+      <td>{{ testcase.steps }}</td>
+      <td>{{ testcase.testData }}</td>
+      <td>{{ testcase.expected }}</td>
+      <td>{{ testcase.postConditions }}</td>
     </tr>
-  </thead>
-  <tr>
-    <td>{{ testcase.title }}</td>
-    <td>{{ testcase.description }}</td>
-  </tr>
-</table>
+  </table>
 </div>
