--- a/src/app/modules/testcases/testcase-details/testcase-details.component.html
+++ b/src/app/modules/testcases/testcase-details/testcase-details.component.html
@@ -15,9 +15,18 @@
       <td>{{ testcase.title }}</td>
       <td>{{ testcase.description }}</td>
       <td>{{ testcase.preConditions }}</td>
-      <td>{{ testcase.steps }}</td>
-      <td>{{ testcase.testData }}</td>
-      <td>{{ testcase.expected }}</td>
+      <td><ul *ngFor="let step of testcase.steps">
+        <li>{{ step }}</li>
+        </ul>
+      </td>
+      <td><ul *ngFor="let testData of testcase.testData">
+        <li>{{ testData }}</li>
+        </ul>
+      </td>
+      <td><ul *ngFor="let expected of testcase.expected">
+        <li>{{ expected }}</li>
+        </ul>
+      </td>
       <td>{{ testcase.postConditions }}</td>
     </tr>
   </table>
