--- a/src/app/modules/projects/projects.component.html
+++ b/src/app/modules/projects/projects.component.html
@@ -5,26 +5,31 @@
   <ng-template #existProjects>
     <div class="projects-wrapper" *ngIf="projects.length > 0;">
 
+
       <div class="project-card card" *ngFor="let project of projects">
-        <img class="card-img-top" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15d2e4c529b%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15d2e4c529b%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22117.75%22%20y%3D%2297.3546875%22%3E318x180%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Card image cap">
+
+        <i class="edit-icon fa fa-cog"></i>
+        <img class="card-img-top" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22300%22%20height%3D%22160%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20300%20160%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15d2e4c529b%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15d2e4c529b%22%3E%3Crect%20width%3D%22300%22%20height%3D%22160%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22117.75%22%20y%3D%2297.3546875%22%3E300x160%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+          alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">{{ project.name }}</h4>
           <p class="card-text">{{ project.description }}</p>
-          <a [routerLink]="['./', project._id]" class="card-button btn btn-primary">Edit</a>
         </div>
+        <a [routerLink]="['./', project._id]" class="btn btn-primary edit-button">Edit</a>
       </div>
+
 
       <div class="project-card card">
         <div class="card-block">
           <h1><i class="fa fa-3x fa-plus"></i></h1>
           <br><br>
-          <a [routerLink]="['./create']" class="card-button btn btn-primary">Create Project</a>
+          <a [routerLink]="['./create']" class="btn btn-primary">Create Project</a>
         </div>
       </div>
 
-     
 
-      </div>
+
+    </div>
   </ng-template>
 
 
@@ -42,4 +47,4 @@
 
 
 
-  </div>
+</div>
