fix(Projects): create button layout fix

--- a/src/app/modules/projects/projects.component.css
+++ b/src/app/modules/projects/projects.component.css
@@ -53,6 +53,17 @@
     border-color: #0275d8;
 }
 
+.create-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    direction: column;
+}
+
+.create-button {
+    margin: 10px;
+}
+
 .noexist-wrapper {
     display: flex;
     height: 600px;
